// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataStreamSecurityItem component should render default view with inherited security 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root dataStreamFileName MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6"
  >
    <a
      class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
      title="test.jpg"
    >
      test.jpg
    </a>
    <br />
    <span
      class="MuiTypography-root MuiTypography-caption"
    >
      Inherited
    </span>
  </div>
  <div
    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6"
  >
    <div
      class="MuiFormControl-root"
      style="width: 100%;"
    >
      <label
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled Mui-required Mui-required"
        data-shrink="true"
        id="dsi-security-policy-0-label"
      >
        Test Policy Dropdown Label
        <span
          aria-hidden="true"
          class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
        >
           *
        </span>
      </label>
      <div
        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
        required=""
        validation="function required(value) {
  return value ? undefined : _validationErrors[\\"default\\"].validationErrors.required;
}"
      >
        <div
          aria-haspopup="listbox"
          aria-labelledby="dsi-security-policy-0-select"
          class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
          data-testid="dsi-security-policy-0-select"
          id="dsi-security-policy-0-select"
          role="button"
          tabindex="0"
        >
          Theses Assessors
        </div>
        <input
          aria-hidden="true"
          aria-labelledby="dsi-security-policy-0-label"
          class="MuiSelect-nativeInput"
          data-testid="dsi-security-policy-0-input"
          id="dsi-security-policy-0-input"
          name="test.jpg"
          required=""
          tabindex="-1"
          value="2"
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSelect-icon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DataStreamSecurityItem component should render default view with overridden security 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root dataStreamFileName MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6"
  >
    <a
      class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
      title="test.jpg"
    >
      test.jpg
    </a>
    <br />
    <span
      class="MuiTypography-root MuiTypography-caption"
    >
      Overridden
    </span>
  </div>
  <div
    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6"
  >
    <div
      class="MuiFormControl-root"
      style="width: 100%;"
    >
      <label
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled Mui-required Mui-required"
        data-shrink="true"
        id="dsi-security-policy-0-label"
      >
        Test Policy Dropdown Label
        <span
          aria-hidden="true"
          class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
        >
           *
        </span>
      </label>
      <div
        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
        required=""
        validation="function required(value) {
  return value ? undefined : _validationErrors[\\"default\\"].validationErrors.required;
}"
      >
        <div
          aria-haspopup="listbox"
          aria-labelledby="dsi-security-policy-0-select"
          class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
          data-testid="dsi-security-policy-0-select"
          id="dsi-security-policy-0-select"
          role="button"
          tabindex="0"
        >
          Theses Assessors
        </div>
        <input
          aria-hidden="true"
          aria-labelledby="dsi-security-policy-0-label"
          class="MuiSelect-nativeInput"
          data-testid="dsi-security-policy-0-input"
          id="dsi-security-policy-0-input"
          name="test.jpg"
          required=""
          tabindex="-1"
          value="2"
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSelect-icon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DataStreamSecurityItem component should render view for a subsequent file 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root dataStreamFileName MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6"
  >
    <a
      class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
      title="test.jpg"
    >
      test.jpg
    </a>
    <br />
    <span
      class="MuiTypography-root MuiTypography-caption"
    >
      Overridden
    </span>
  </div>
  <div
    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6"
  >
    <div
      class="MuiFormControl-root"
      style="width: 100%;"
    >
      <label
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled Mui-required Mui-required"
        data-shrink="true"
        id="dsi-security-policy-2-label"
      >
        Test Policy Dropdown Label
        <span
          aria-hidden="true"
          class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
        >
           *
        </span>
      </label>
      <div
        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
        required=""
        validation="function required(value) {
  return value ? undefined : _validationErrors[\\"default\\"].validationErrors.required;
}"
      >
        <div
          aria-haspopup="listbox"
          aria-labelledby="dsi-security-policy-2-select"
          class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
          data-testid="dsi-security-policy-2-select"
          id="dsi-security-policy-2-select"
          role="button"
          tabindex="0"
        >
          Theses Assessors
        </div>
        <input
          aria-hidden="true"
          aria-labelledby="dsi-security-policy-2-label"
          class="MuiSelect-nativeInput"
          data-testid="dsi-security-policy-2-input"
          id="dsi-security-policy-2-input"
          name="test.jpg"
          required=""
          tabindex="-1"
          value="2"
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSelect-icon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
